Added another API call to support the email at booking time
